# virtual-machine

./: CMakeLists.txt  LICENSE  README.md
src/: loader.c  vm.c  wrun.c
test/: test_core.c  test_funcs.c
test/samples/: fib.bytecode  hello.bytecode  printarg.bytecode
